--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ font-family: 'Odibee Sans', cursive;
 <section id="lesson">
 <h1>Lesson</h1>
 <div id="lesson">
-<p><img src ="./images/lesson.jpg" alt="Lesson Image" /></p>
+<p><img src ="images/lesson.jpg" alt="Lesson Image" /></p>
 <p>The influence of social media and the sheer reach of information 
 both true and false —is dominating headlines and the collective public conscience. 
 Most recently, false stories surrounding the 2016 U.S. presidential election spread like wildfire, causing many to question the power of social platforms such as Facebook,
@@ -83,7 +83,7 @@ Many of these arguments are easily believed as they use scientific language or a
 <footer>
 <ul id="social" class="clearfix">
 <li><a href="https://www.fb.com"><img src="images/facebook.png" alt="facebook icon"/></a></li>
-<li><a href="https://www.instagram.com"><img src="images/instagram.png" alt="instagram icon"/></a></li>
+<li><a href="https://www.instagram.com"><img src="./instagram.png" alt="instagram icon"/></a></li>
 <li><a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter icon"/></a></li>
 <li><a href="https://www.TikTok.com"><img src="images/TikTok.png" alt="tiktok icon"/></a></li>
 </ul>
