--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Many of these arguments are easily believed as they use scientific language or a
 
 <footer>
 <ul id="social" class="clearfix">
-<li><a href="https://www.fb.com"><img src="images/facebook.png" alt="facebook icon"/></a></li>
+<li><a href="https://www.fb.com"><img src="Images/facebook.png" alt="facebook icon"/></a></li>
 <li><a href="https://www.instagram.com"><img src="./instagram.png" alt="instagram icon"/></a></li>
 <li><a href="https://www.twitter.com"><img src="images/twitter.png" alt="twitter icon"/></a></li>
 <li><a href="https://www.TikTok.com"><img src="images/TikTok.png" alt="tiktok icon"/></a></li>
